<resources>
    <string name="app_name">Mr Search CBJ</string>
    <string name="docente">Docente</string>
    <string name="iniciar_en_modo">Iniciar en modo:</string>
    <string name="estudiante">Estudiante</string>

    <string name="todo">TODO</string>
    <string name="listo">Listo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seleccione_su_curso">Seleccione su curso:</string>
    <string name="horario">HORARIO</string>
    <string name="configuracion">CONFIGURACION</string>
    <string name="lunes">L</string>
    <string name="martes">M</string>
    <string name="miercoles">M</string>
    <string name="jueves">J</string>
    <string name="viernes">V</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_educarplus">Educar Plus</string>
    <string name="title_noticias">Noticias</string>
    <string name="title_horario">Horario</string>
    <string name="title_novedad">Novedades</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_activity_post">PostActivity</string>

</resources>
