<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Estudiante.fragments.HorarioFrag">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnlunes"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunes"
            android:background="@drawable/estadobtnbackground_docente"
            />
        <Button
            android:id="@+id/btnmartes"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/martes"
            android:background="@drawable/estadobtnbackground_docente"
            />
        <Button
            android:id="@+id/btnmiercoles"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miercoles"
            android:background="@drawable/estadobtnbackground_docente"
            />
        <Button
            android:id="@+id/btnjueves"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jueves"
            android:background="@drawable/estadobtnbackground_docente"
            />
        <Button
            android:id="@+id/btnviernes"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viernes"
            android:background="@drawable/estadobtnbackground_docente"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_normal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <TextView
        android:id="@+id/daytxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LUNES"
        android:textStyle="bold"
        android:elegantTextHeight="true"
        android:textSize="16sp"
        android:textColor="@color/rojoscuro"
        android:gravity="center"
        android:padding="5dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHorario"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
</LinearLayout>